--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"homepage": "https://github.com/viewee/backend#readme",
 	"dependencies": {
+		"@truepic/queryql": "^0.8.0",
 		"bcryptjs": "^2.4.3",
 		"connect-session-knex": "^1.6.0",
 		"cors": "^2.8.5",
