--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
 	"homepage": "https://github.com/viewee/backend#readme",
 	"dependencies": {
 		"@truepic/queryql": "^0.8.0",
-		"bcryptjs": "^2.4.3",
 		"connect-session-knex": "^1.6.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.0",
 		"helmet": "^3.21.3",
+		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.21.1",
 		"passport": "^0.4.1",
 		"passport-facebook": "^3.0.0",
